--- a/6/main.css
+++ b/6/main.css
@@ -7,7 +7,7 @@
             border-color:gray;
           }
 
-
+/*
 
           .block01
           {
@@ -37,7 +37,7 @@
               left:210px;
               top:80px;
           }
-
+*/
 
 
 
